--- a/coderSwag/Base.lproj/LaunchScreen.storyboard
+++ b/coderSwag/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,16 +12,53 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jTQ-Nh-ZfB"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qcq-k5-AjV"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="codecode" translatesAutoresizingMaskIntoConstraints="NO" id="hhk-NQ-TPH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CODER " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pmF-Qz-5L2">
+                                <rect key="frame" x="39" y="20" width="297" height="74"/>
+                                <color key="backgroundColor" red="0.3921568627" green="0.22352941179999999" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="60"/>
+                                <color key="textColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SWAG" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oa6-fP-CPY">
+                                <rect key="frame" x="39" y="585" width="297" height="74"/>
+                                <color key="backgroundColor" red="0.3921568627" green="0.22352941179999999" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="60"/>
+                                <color key="textColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hhk-NQ-TPH" secondAttribute="trailing" id="6sY-lZ-3EB"/>
+                            <constraint firstItem="Qcq-k5-AjV" firstAttribute="top" secondItem="oa6-fP-CPY" secondAttribute="bottom" constant="8" id="7AH-4u-yeW"/>
+                            <constraint firstItem="pmF-Qz-5L2" firstAttribute="top" secondItem="jTQ-Nh-ZfB" secondAttribute="bottom" id="Dll-Pa-OGe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pmF-Qz-5L2" secondAttribute="trailing" constant="23" id="L3o-8v-4QY"/>
+                            <constraint firstItem="pmF-Qz-5L2" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="23" id="RFU-fk-m5q"/>
+                            <constraint firstItem="hhk-NQ-TPH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Vv5-cw-bFp"/>
+                            <constraint firstItem="hhk-NQ-TPH" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="YcJ-L5-F52"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oa6-fP-CPY" secondAttribute="trailing" constant="23" id="Ytf-DD-OVh"/>
+                            <constraint firstItem="oa6-fP-CPY" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="23" id="aDL-vq-3de"/>
+                            <constraint firstItem="Qcq-k5-AjV" firstAttribute="top" secondItem="hhk-NQ-TPH" secondAttribute="bottom" id="pJB-q7-e4J"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="50.390625" y="372.47437774524155"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="codecode" width="730" height="486"/>
+    </resources>
 </document>
