add collection view and collection view cells. Format collection view cells.

--- a/coderSwag/Base.lproj/Main.storyboard
+++ b/coderSwag/Base.lproj/Main.storyboard
@@ -99,12 +99,88 @@
                     <view key="view" contentMode="scaleToFill" id="Jh8-gh-fLj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Products" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCM-hc-Jci">
+                                <rect key="frame" x="16" y="30" width="183" height="23.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="183" id="j94-ky-qNi"/>
+                                    <constraint firstAttribute="height" constant="23.5" id="sQw-K8-kms"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AGG-Dp-wSU">
+                                <rect key="frame" x="0.0" y="69.5" width="375" height="533.5"/>
+                                <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="P7G-lk-bHI">
+                                    <size key="itemSize" width="179" height="271"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rMR-iO-jG5">
+                                        <rect key="frame" x="0.0" y="0.0" width="179" height="271"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="179" height="271"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="q5z-X9-jRz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="179" height="170"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="170" id="QZR-HW-afh"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Logo Graphic TeeShirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq4-5w-UJ1">
+                                                    <rect key="frame" x="0.0" y="179" width="179" height="46"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="46" id="zx3-bd-NTV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                                    <color key="textColor" red="0.089995779815664201" green="0.089995779815664201" blue="0.089995779815664201" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pm-Bk-Jug">
+                                                    <rect key="frame" x="0.0" y="228" width="179" height="39"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                                    <color key="textColor" red="0.089995779819999996" green="0.089995779819999996" blue="0.089995779819999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Iq4-5w-UJ1" firstAttribute="top" secondItem="q5z-X9-jRz" secondAttribute="bottom" constant="9" id="KSG-bA-HSI"/>
+                                            <constraint firstItem="q5z-X9-jRz" firstAttribute="top" secondItem="rMR-iO-jG5" secondAttribute="top" id="Msj-rV-Fjt"/>
+                                            <constraint firstItem="6pm-Bk-Jug" firstAttribute="leading" secondItem="rMR-iO-jG5" secondAttribute="leading" id="WeA-DZ-VAs"/>
+                                            <constraint firstItem="q5z-X9-jRz" firstAttribute="leading" secondItem="rMR-iO-jG5" secondAttribute="leading" id="ZAe-9k-vnN"/>
+                                            <constraint firstAttribute="trailing" secondItem="Iq4-5w-UJ1" secondAttribute="trailing" id="aXr-gB-Ey2"/>
+                                            <constraint firstItem="6pm-Bk-Jug" firstAttribute="top" secondItem="Iq4-5w-UJ1" secondAttribute="bottom" constant="3" id="bf7-hF-g2D"/>
+                                            <constraint firstItem="Iq4-5w-UJ1" firstAttribute="leading" secondItem="rMR-iO-jG5" secondAttribute="leading" id="cMi-Ds-5rd"/>
+                                            <constraint firstAttribute="trailing" secondItem="q5z-X9-jRz" secondAttribute="trailing" id="raM-t3-Ydz"/>
+                                            <constraint firstAttribute="bottom" secondItem="6pm-Bk-Jug" secondAttribute="bottom" constant="4" id="xh0-XG-0qg"/>
+                                            <constraint firstAttribute="trailing" secondItem="6pm-Bk-Jug" secondAttribute="trailing" id="xyq-0f-ec8"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="AGG-Dp-wSU" firstAttribute="top" secondItem="bCM-hc-Jci" secondAttribute="bottom" constant="16" id="NVu-cc-AwJ"/>
+                            <constraint firstItem="bCM-hc-Jci" firstAttribute="top" secondItem="sYS-ZY-RjR" secondAttribute="bottom" constant="30" id="Rju-4f-kfB"/>
+                            <constraint firstItem="bCM-hc-Jci" firstAttribute="leading" secondItem="Jh8-gh-fLj" secondAttribute="leadingMargin" id="VcP-pP-629"/>
+                            <constraint firstItem="wpO-gM-HlX" firstAttribute="top" secondItem="AGG-Dp-wSU" secondAttribute="bottom" id="Y6R-12-Kki"/>
+                            <constraint firstItem="AGG-Dp-wSU" firstAttribute="leading" secondItem="Jh8-gh-fLj" secondAttribute="leading" id="hNq-MK-wCE"/>
+                            <constraint firstAttribute="trailing" secondItem="AGG-Dp-wSU" secondAttribute="trailing" id="pzE-jU-1SE"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BfJ-Yn-U6V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1452" y="116"/>
+            <point key="canvasLocation" x="1452" y="115.59220389805098"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4MN-GA-mNW">
@@ -132,5 +208,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
