--- a/coderSwag/Base.lproj/Main.storyboard
+++ b/coderSwag/Base.lproj/Main.storyboard
@@ -120,14 +120,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rMR-iO-jG5">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rMR-iO-jG5" customClass="ProductCell" customModule="coderSwag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="179" height="271"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="179" height="271"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="q5z-X9-jRz">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="q5z-X9-jRz" userLabel="Product Image">
                                                     <rect key="frame" x="0.0" y="0.0" width="179" height="170"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="170" id="QZR-HW-afh"/>
@@ -163,6 +163,11 @@
                                             <constraint firstAttribute="bottom" secondItem="6pm-Bk-Jug" secondAttribute="bottom" constant="4" id="xh0-XG-0qg"/>
                                             <constraint firstAttribute="trailing" secondItem="6pm-Bk-Jug" secondAttribute="trailing" id="xyq-0f-ec8"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="q5z-X9-jRz" id="Mfv-t3-hAo"/>
+                                            <outlet property="productPrice" destination="6pm-Bk-Jug" id="se0-7k-sOV"/>
+                                            <outlet property="productTitle" destination="Iq4-5w-UJ1" id="T6P-Er-tS1"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
